# models/user_info.go
@@ -1,0 +1,62 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// UserInfo user info
+//
+// swagger:model userInfo
+type UserInfo struct {
+
+	// email
+	Email string `json:"email,omitempty"`
+
+	// id
+	ID string `json:"id,omitempty"`
+
+	// name
+	Name string `json:"name,omitempty"`
+
+	// picture
+	Picture string `json:"picture,omitempty"`
+
+	// verified email
+	VerifiedEmail bool `json:"verified_email,omitempty"`
+}
+
+// Validate validates this user info
+func (m *UserInfo) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this user info based on context it is used
+func (m *UserInfo) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *UserInfo) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *UserInfo) UnmarshalBinary(b []byte) error {
+	var res UserInfo
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
