# schema/swagger.yml
@@ -232,6 +232,61 @@ paths:
       tags:
         - public
       summary: "This API endpoint create, store and returns credentials for new user"
+  /google/login:
+    get:
+      produces:
+      - application/json
+      parameters: []
+      responses:
+        '200':
+          description: "ok response"
+          schema:
+            "$ref": "#/definitions/ok"
+        '500':
+          description: "When some error occurs"
+          schema:
+            "$ref": "#/definitions/error"
+      tags:
+      - public
+      summary: "This API endpoint always responds ok"
+  /google/callback:
+    get:
+      produces:
+      - application/json
+      parameters: 
+        - type: string
+          name: state
+          in: query
+          required: false
+          description: "client state"
+        - type: string
+          name: scope
+          in: query
+          required: false
+          description: "client scope"
+        - type: string
+          name: authuser
+          in: query
+          required: false
+          description: "client identity"
+        - type: string
+          name: prompt
+          in: query
+          required: false
+          description: "consent"
+          
+      responses:
+        '200':
+          description: "ok response"
+          schema:
+            "$ref": "#/definitions/userInfo"
+        '500':
+          description: "When some error occurs"
+          schema:
+            "$ref": "#/definitions/error"
+      tags:
+      - public
+      summary: "This API endpoint always responds ok"
 definitions:
   error:
     properties:
@@ -305,6 +360,19 @@ definitions:
       data:
         type: string
     type: object
+  userInfo:
+    type: object
+    properties:
+      id: 
+        type: string
+      email: 
+        type: string
+      verified_email: 
+        type: boolean
+      name: 
+        type: string
+      picture: 
+        type: string
   metrics:
     type: object
     additionalProperties:
